[gd_scene load_steps=21 format=2]

[ext_resource path="res://STARTMENUE.gd" type="Script" id=1]
[ext_resource path="res://background/bg_starburst_aqua_iphone.png" type="Texture" id=2]
[ext_resource path="res://background/bg_starburst_black_iphone.png" type="Texture" id=3]
[ext_resource path="res://background/bg_starburst_blue_iphone.png" type="Texture" id=4]
[ext_resource path="res://background/bg_starburst_green_light_iphone.png" type="Texture" id=5]
[ext_resource path="res://background/bg_starburst_green_med_iphone.png" type="Texture" id=6]
[ext_resource path="res://background/bg_starburst_orange_iphone.png" type="Texture" id=7]
[ext_resource path="res://background/bg_starburst_pink_iphone.png" type="Texture" id=8]
[ext_resource path="res://background/bg_starburst_red_iphone.png" type="Texture" id=9]
[ext_resource path="res://stardate_81316.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://flatDark15.png" type="Texture" id=11]
[ext_resource path="res://flatDark34.png" type="Texture" id=12]
[ext_resource path="res://flatDark17.png" type="Texture" id=13]
[ext_resource path="res://Lost-Jungle_Looping.ogg" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 80
outline_color = Color( 0.380392, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 10 )

[node name="STARTMENUE" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 533.622, 287.271 )
rotation = -1.57079
scale = Vector2( 1, 1.03676 )
frames = SubResource( 1 )
speed_scale = 0.1
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 445.525
margin_top = 565.0
margin_right = 561.525
margin_bottom = 584.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0.976471, 0.0117647, 0.0117647, 1 )
text = "@copyright 2019 CHINUON"

[node name="Label2" type="Label" parent="."]
margin_left = 342.012
margin_top = 86.8588
margin_right = 838.012
margin_bottom = 165.859
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.505882, 0.447059, 0.447059, 1 )
custom_colors/font_outline_modulate = Color( 0.901961, 0.0901961, 0.0901961, 1 )
custom_colors/font_color_shadow = Color( 0.00392157, 0, 0, 1 )
text = "Monster Smash"

[node name="Button" type="Button" parent="."]
margin_left = 478.0
margin_top = 237.0
margin_right = 566.0
margin_bottom = 310.0

[node name="flatDark15" type="Sprite" parent="Button"]
position = Vector2( 43.384, 39.619 )
scale = Vector2( 2.03427, 1.76446 )
texture = ExtResource( 11 )

[node name="Button2" type="Button" parent="."]
margin_left = 494.0
margin_top = 356.0
margin_right = 555.0
margin_bottom = 419.0

[node name="flatDark34" type="Sprite" parent="Button2"]
position = Vector2( 27.1955, 32.0644 )
scale = Vector2( 1.35975, 1.44968 )
texture = ExtResource( 12 )

[node name="Button3" type="Button" parent="."]
modulate = Color( 0.980392, 0.901961, 0.901961, 0.670588 )
margin_left = 960.517
margin_top = 1.84149
margin_right = 1020.52
margin_bottom = 55.8415
icon = ExtResource( 13 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
autoplay = true

[node name="chinu" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "HIGH SCORE - "

[node name="score" type="Label" parent="."]
margin_left = 121.609
margin_top = 1.24345
margin_right = 165.609
margin_bottom = 31.2435
custom_fonts/font = SubResource( 6 )
text = "0"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
